--- a/src/components/pages/Score.css
+++ b/src/components/pages/Score.css
@@ -1,13 +1,22 @@
+.playerScores h1 {
+  text-align: center;
+}
+
 .playerScores ul {
   padding: 0;
   margin: 0;
   list-style: none;
 }
 
-.playerScores .top ul {
-  display: flex;
+.playerScores .top {
+  margin-bottom: 20px;
 }
 
+.playerScores .top ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
 
 .playerScores .top li {  
   margin: 5px;
@@ -16,13 +25,13 @@
   height: 350px;
 }
 
-.playerScores .top li div {
+.playerScores .top li > div {
   display: flex;
   align-content: center;
   justify-content: center;
 }
 
-.playerScores .top li div h4 {
+.playerScores .top li div h3 {
   margin: 5px 0;
 }
 
