more style tweaks

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,3 +1,12 @@
 .login-form input {
   margin-bottom: 20px;
 }
+
+.show-answer[data-correct="true"] {
+  font-weight: bold;
+}
+
+.quiz-questions {
+  list-style-type: none;
+  padding: 0 0 0 10px;
+}
